--- a/app/handlebars/particles_swarm.handlebars
+++ b/app/handlebars/particles_swarm.handlebars
@@ -1,3 +1,5 @@
 {{> header}}
-	
+	<video id="video" controls loop autoplay>
+	    <source src="../img/particles_swarm/video1.mp4" type="video/mp4">
+	</video>
 {{> footer}}
