Landscape new version

--- a/app/handlebars/landscape.handlebars
+++ b/app/handlebars/landscape.handlebars
@@ -1,3 +1,8 @@
 {{> header}}
-	
+	<div id="keyboard-control">
+		<div class="up"></div>
+		<div class="left"></div>
+		<div class="down"></div>
+		<div class="right"></div>
+	</div>
 {{> footer}}
