Particles swarm new version + global interface structure

--- a/app/handlebars/partials/header.handlebars
+++ b/app/handlebars/partials/header.handlebars
@@ -23,3 +23,31 @@
 
 </head>
 <body class="{{ template }}">
+
+	<div id="exp-menu">
+		<div class="menu-ctn">
+			<div class="table">
+				<div class="table-cell">
+					<h2>All Experiments</h2>
+					<ul>
+						<li><a href="/sun/">Sun</a></li>
+						<li><a href="/particles_swarm/">Music + Video - 1</a></li>
+						<li><a href="/landscape/">Snowy Landscape</a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+		<div class="tip">
+			<div class="table">
+				<div class="table-cell">
+					<a href="#">
+						<div class="table">
+							<div class="table-cell">
+								<div class="symbol"></div>
+							</div>
+						</div>
+					</a>
+				</div>
+			</div>
+		</div>
+	</div>
