--- a/app/handlebars/partials/footer.handlebars
+++ b/app/handlebars/partials/footer.handlebars
@@ -1,5 +1,9 @@
 
 		<div id="three-canvas"></div>
+		<div class="footer-bottom">
+			<div class="infos"></div>
+			<div class="credits">Created just for fun by <a target="_blank" href="http://gpomp.com">Gauthier Pompougnac</a></div>
+		</div>
 		<script type="text/javascript" src="../js/global-vendors.js"></script>
 		<script type="text/javascript" src="../js/base-3d.js"></script>
 		<script type="text/javascript" src="js/includes.js"></script>
