--- a/app/handlebars/partials/header.handlebars
+++ b/app/handlebars/partials/header.handlebars
@@ -31,7 +31,7 @@
 					<h2>All Experiments</h2>
 					<ul>
 						<li><a href="/sun/">Sun</a></li>
-						<li><a href="/particles_swarm/">Music + Video - 1</a></li>
+						<li><a href="/particlesswarm/">Music + Video - 1</a></li> 
 						<li><a href="/landscape/">Snowy Landscape</a></li>
 					</ul>
 				</div>
