--- a/app/handlebars/partials/footer.handlebars
+++ b/app/handlebars/partials/footer.handlebars
@@ -1,7 +1,25 @@
 
 		<div id="three-canvas"></div>
 		<div class="footer-bottom">
-			<div class="infos"></div>
+			<div class="infos">
+				<a href="#" id="show-infos">
+					<div class="icon-ctn">
+						<div class="table">
+							<div class="table-cell">
+								<span class="icon-info"></span>
+							</div>
+						</div>
+					</div>
+					<div class="icon-ctn">
+						<div class="table">
+							<div class="table-cell">
+								<span class="icon-close"></span>
+							</div>
+						</div>
+					</div>
+							
+				</a>
+			</div>
 			<div class="credits">Created just for fun by <a target="_blank" href="http://gpomp.com">Gauthier Pompougnac</a></div>
 		</div>
 		<script type="text/javascript" src="../js/global-vendors.js"></script>
