Added infos to particleswarm

--- a/app/handlebars/particlesswarm.handlebars
+++ b/app/handlebars/particlesswarm.handlebars
@@ -1,4 +1,27 @@
 {{> header}}
+	{{> project-header}}
+		<h1>Music + Video take I</h1>
+		<p>Takes each image of a video, copy it on a canvas and display it on a one line geometry rearranged as a plane. Then take the brightness as the z value. Works really well with high contrast videos</p>
+		<p>I also get the sound difference between the current frame and the last frame with the Sound API. I draw the result on a circle in the shader around the video.</p>
+		<h3>What's next?</h3>
+		<p>I think it could look really good as a stage installation. Each member of the band would be filmed by a simple camera with a light behind. You could then get the image via webRTC and play with each stream with this animation. </p>
+		<h3>Sources</h3>
+		<p>
+			<a href="https://github.com/gpomp/exp-webgl/tree/master/app/typescript/{{template}}" target="_blank">Typescript</a><br/><br/>
+			<a href="https://github.com/gpomp/exp-webgl/tree/master/app/shaders/{{template}}" target="_blank">Shaders</a>
+		</p>
+		<h3>Video &amp; Music Credits</h3>
+		<p>Directed, shot and edited by Brendan Canty and Conal Thomson of Feel Good Lost</p>
+		<p>Music by Sun Glitters <br>
+			<a href="http://www.sunglitters.com/" target="_blank" rel="nofollow">sunglitters.com/</a><br>
+			<a href="http://sunglitters.bandcamp.com/" target="_blank" rel="nofollow">sunglitters.bandcamp.com/</a><br>
+			<a href="http://soundcloud.com/sunglitters" target="_blank" rel="nofollow">soundcloud.com/sunglitters</a>
+		</p>
+		<p>From the the EP 'High' <br>
+			<a href="http://www.musicisforlosers.com/home/sun-glitters-releases-his-ep-on-musicisforlosers.html" target="_blank" rel="nofollow">musicisforlosers.com/home/sun-glitters-releases-his-ep-on-musicisforlosers.html</a>
+		</p>
+
+	{{> project-footer}}
 	<video id="video" controls loop autoplay>
 	    <source src="../img/particles_swarm/video.mp4" type="video/mp4">  
 	</video>
