--- a/app/handlebars/sun.handlebars
+++ b/app/handlebars/sun.handlebars
@@ -1,3 +1,11 @@
 {{> header}}
-	
+	{{> project-header}}
+		<h1>Sun</h1>
+		
+		<h3>Sources</h3>
+		<p>
+			<a href="https://github.com/gpomp/exp-webgl/tree/master/app/typescript/{{template}}" target="_blank">Typescript</a><br/><br/>
+			<a href="https://github.com/gpomp/exp-webgl/tree/master/app/shaders/{{template}}" target="_blank">Shaders</a>
+		</p>
+	{{> project-footer}}
 {{> footer}}
