more structure updates

--- a/app/handlebars/partials/header.handlebars
+++ b/app/handlebars/partials/header.handlebars
@@ -28,7 +28,6 @@
 		<div class="menu-ctn">
 			<div class="table">
 				<div class="table-cell">
-					<h2>All Experiments</h2>
 					<ul>
 						{{> menuButton url="sun" label="Sun"}}
 						{{> menuButton url="particlesswarm" label="Music + Video - 1"}}
@@ -41,10 +40,11 @@
 			<div class="table">
 				<div class="table-cell">
 					<a href="#">
-						<div class="table">
-							<div class="table-cell">
-								<div class="symbol"></div>
-							</div>
+					<div class="bg-expand"></div>
+						<div class="content-expand">
+							<span></span>
+							More Expermients
+							<span></span>
 						</div>
 					</a>
 				</div>
