--- a/app/handlebars/landscape.handlebars
+++ b/app/handlebars/landscape.handlebars
@@ -5,7 +5,7 @@
 		<p>Just a simple Plane Geometry a bit randomised where I scroll a 3d noise for the height value. It make it really easy to do an infinite landscape at low cost for the GPU. The downside though is this kind of "travelator" effect when you move (you can really see the shadow scrolling from 1 vertex to another). Didn't find a good solution for that yet.</p>
 		<h3>Sources</h3>
 		<p>
-			<a href="https://github.com/gpomp/exp-webgl/tree/master/app/typescript/{{template}}" target="_blank">Typescript</a><br/><br/>
+			<a href="https://github.com/gpomp/exp-webgl/tree/master/app/typescript/{{template}}" target="_blank">Typescript</a><br>
 			<a href="https://github.com/gpomp/exp-webgl/tree/master/app/shaders/{{template}}" target="_blank">Shaders</a>
 		</p>
 	{{> project-footer}}
