--- a/app/handlebars/particlesswarm.handlebars
+++ b/app/handlebars/particlesswarm.handlebars
@@ -7,7 +7,7 @@
 		<p>I think it could look really good as a stage installation. Each member of the band would be filmed by a simple camera with a light behind. You could then get the image via webRTC and play with each stream with this animation. </p>
 		<h3>Sources</h3>
 		<p>
-			<a href="https://github.com/gpomp/exp-webgl/tree/master/app/typescript/{{template}}" target="_blank">Typescript</a><br/><br/>
+			<a href="https://github.com/gpomp/exp-webgl/tree/master/app/typescript/{{template}}" target="_blank">Typescript</a><br>
 			<a href="https://github.com/gpomp/exp-webgl/tree/master/app/shaders/{{template}}" target="_blank">Shaders</a>
 		</p>
 		<h3>Video &amp; Music Credits</h3>
