--- a/app/less/main.less
+++ b/app/less/main.less
@@ -244,7 +244,7 @@ body {
 
 	.tip {
 		position: absolute;
-		right: -131px;
+		right: -119px;
 		top: 0;
 		height: 100%;
 		overflow: hidden;
@@ -266,7 +266,7 @@ body {
 
 			transform: rotate(90deg);
 			transition: all 0.2s ease-in-out;
-			font-size: 160%;
+			font-size: 140%;
 			text-transform: uppercase;
 			font-weight: 600;
 
@@ -295,6 +295,7 @@ body {
 				display: inline-block;
 				.icon(point-up);
 				transform: translate(0, 0);
+				vertical-align: middle;
 				&:first-child {
 					margin-right: 3px;
 				}
@@ -604,10 +605,8 @@ body {
 				font-size: 200%;
 				text-transform: uppercase;
 				font-weight: 600;
-				margin: 0;
+				margin: 20px 0 15px 0;
 				padding: 0;
-				margin-top: 10px;
-				margin-bottom: 20px;
 				letter-spacing: 0.05em;
 			}
 
