--- a/app/handlebars/sun.handlebars
+++ b/app/handlebars/sun.handlebars
@@ -2,9 +2,11 @@
 	{{> project-header}}
 		<h1>Sun</h1>
 		
+		<p>A sphere with a few noise effect in the fragment shader.</p>
+		
 		<h3>Sources</h3>
 		<p>
-			<a href="https://github.com/gpomp/exp-webgl/tree/master/app/typescript/{{template}}" target="_blank">Typescript</a><br/><br/>
+			<a href="https://github.com/gpomp/exp-webgl/tree/master/app/typescript/{{template}}" target="_blank">Typescript</a><br>
 			<a href="https://github.com/gpomp/exp-webgl/tree/master/app/shaders/{{template}}" target="_blank">Shaders</a>
 		</p>
 	{{> project-footer}}
