Replaced sun name by fireball & particlesswarm by musicvideo1

--- a/app/handlebars/partials/header.handlebars
+++ b/app/handlebars/partials/header.handlebars
@@ -29,8 +29,8 @@
 			<div class="table">
 				<div class="table-cell">
 					<ul>
-						{{> menuButton url="sun" label="Sun"}}
-						{{> menuButton url="particlesswarm" label="Music + Video - 1"}}
+						{{> menuButton url="fireball" label="Fire ball"}}
+						{{> menuButton url="musicvideo1" label="Music + Video - 1"}}
 						{{> menuButton url="landscape" label="Snowy Landscape"}}
 					</ul>
 				</div>
