new video music experiment

--- a/app/handlebars/musicvideo1.handlebars
+++ b/app/handlebars/musicvideo1.handlebars
@@ -1,6 +1,6 @@
 {{> header}}
 	{{> project-header}}
-		<h1>Music + Video take I</h1>
+		<h1>Music + Video I</h1>
 		<p>Takes each image of a video, copy it on a canvas and display it on a one line geometry rearranged as a plane. Then take the brightness as the z value. Works really well with high contrast videos</p>
 		<p>I also get the sound difference between the current frame and the last frame with the Sound API. I draw the result on a circle in the shader around the video.</p>
 		<h3>What's next?</h3>
