--- a/app/handlebars/partials/header.handlebars
+++ b/app/handlebars/partials/header.handlebars
@@ -31,6 +31,7 @@
 					<ul>
 						{{> menuButton url="fireball" label="Fire ball"}}
 						{{> menuButton url="musicvideo1" label="Music + Video - 1"}}
+						{{> menuButton url="musicvideo2" label="Music + Video - 2"}}
 						{{> menuButton url="landscape" label="Snowy Landscape"}}
 					</ul>
 				</div>
