Added default text to cube example

--- a/app/handlebars/cubeExample.handlebars
+++ b/app/handlebars/cubeExample.handlebars
@@ -1,3 +1,13 @@
 {{> header}}
-	
+	{{> project-header}}
+		<h1>Cube Example</h1>
+		
+		<p>Dummy project to copy/paste when I start a new one...</p>
+		
+		<h3>Sources</h3>
+		<p>
+			<a href="https://github.com/gpomp/exp-webgl/tree/master/app/typescript/{{template}}" target="_blank">Typescript</a><br>
+			<a href="https://github.com/gpomp/exp-webgl/tree/master/app/shaders/{{template}}" target="_blank">Shaders</a>
+		</p>
+	{{> project-footer}}
 {{> footer}}
