Added tracking + meta SEO

--- a/app/handlebars/partials/header.handlebars
+++ b/app/handlebars/partials/header.handlebars
@@ -7,8 +7,8 @@
 	<meta charset="utf-8">
 	<title>Gpomp - Experiments - {{ template }}</title>
 
-	<meta name="description" content="">
-	<meta name="keywords" content="">
+	<meta name="description" content="Gauthier Pompougnac, freelance Frontend Developer Lab. Here you can find my last experimentations. Mostly in Webgl, Arduino, CSS, JS...">
+	<meta name="keywords" content="gauthier pompougnac, website, programming, frontend, front-end, vancouver, webgl, css, html, {{ template }}">
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,7 +20,13 @@
 	<link type="text/css" rel="stylesheet" href="css/main.css">
 
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.js"></script>
+	<script type="text/javascript">
 
+          var _gaq = _gaq || [];
+          _gaq.push(['_setAccount', 'UA-47410818-1']);
+          _gaq.push(['_trackPageview']);
+
+    </script>
 </head>
 <body class="{{ template }} {{ bodyClass }}">
      
