--- a/app/handlebars/partials/footer.handlebars
+++ b/app/handlebars/partials/footer.handlebars
@@ -26,5 +26,14 @@
 		<script type="text/javascript" src="../js/base-3d.js"></script>
 		<script type="text/javascript" src="js/includes.js"></script>
 		<script type="text/javascript" src="js/experiment.js"></script>
+
+		<script type="text/javascript">
+          (function() {
+            var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+            var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+          })();
+
+        </script>
 	</body>
 </html>
