music vid 2 changes

--- a/app/handlebars/musicvideo2.handlebars
+++ b/app/handlebars/musicvideo2.handlebars
@@ -4,6 +4,11 @@
 		
 		<p>Another little experiment that could look cool on stage with a few camera setup.</p>
 		<p>Use a Voronoi implementation to create the cells and then apply the texture in a shader. I get the sound a bit differently than on the other. I only take 64 samples.</p>
+
+		<h3>What's next?</h3>
+		<p>Probably doing something in the backgrounds (lines escaping with colors in relation with the video?).<br>
+		Doing something more interesting with the cells (maybe dispatching them and doing a path with the camera?)<br>
+		Casting shadows</p>
 		
 		<h3>Sources</h3>
 		<p>
