Added video link to mv1 credits

--- a/app/handlebars/musicvideo1.handlebars
+++ b/app/handlebars/musicvideo1.handlebars
@@ -20,6 +20,8 @@
 		<p>From the the EP 'High' <br>
 			<a href="http://www.musicisforlosers.com/home/sun-glitters-releases-his-ep-on-musicisforlosers.html" target="_blank" rel="nofollow">musicisforlosers.com/home/sun-glitters-releases-his-ep-on-musicisforlosers.html</a>
 		</p>
+		<p><a href="https://vimeo.com/36596844" target="_blank">the Video on Vimeo</a></p>
+		
 
 	{{> project-footer}}
 	<video id="video" controls loop autoplay>
