Added mousecontrol to mv2 & changed fireball title

--- a/app/handlebars/fireball.handlebars
+++ b/app/handlebars/fireball.handlebars
@@ -1,6 +1,6 @@
 {{> header}}
 	{{> project-header}}
-		<h1>Sun</h1>
+		<h1>Fireball</h1>
 		
 		<p>A sphere with a few noise effect in the fragment shader.</p>
 		
