Disabled mobile/tablet

--- a/app/handlebars/partials/header.handlebars
+++ b/app/handlebars/partials/header.handlebars
@@ -29,6 +29,13 @@
     </script>
 </head>
 <body class="{{ template }} {{ bodyClass }}">
+
+	<div id="not-supported">
+		<div class="supp-content">
+			Oups! Sorry about that, but I didn't have time to work on a mobile/tablet version... I hope to fix that soon... Come back on your computer and on Chrome if you want the best experience! You can still check my 
+			<a href="http://gpomp.com">portfolio</a>.
+		</div>
+	</div>
      
 	<div id="exp-menu"> 
 		<div class="menu-ctn">
