ready to add 2d base

--- a/app/handlebars/partials/footer.handlebars
+++ b/app/handlebars/partials/footer.handlebars
@@ -22,7 +22,7 @@
 			</div>
 			<div class="credits">Created just for fun by <a target="_blank" href="http://gpomp.com">Gauthier Pompougnac</a></div>
 		</div>
-		<script type="text/javascript" src="../js/global-vendors.js"></script>
+		<script type="text/javascript" src="../js/vendors-3d.js"></script>
 		<script type="text/javascript" src="../js/base-3d.js"></script>
 		<script type="text/javascript" src="js/includes.js"></script>
 		<script type="text/javascript" src="js/experiment.js"></script>
