--- a/app/less/main.less
+++ b/app/less/main.less
@@ -407,7 +407,8 @@ body {
 		#show-infos {
 			pointer-events: all;
 			position: relative;
-			display: block;
+			display: inline-block;
+			vertical-align: middle;
 			font-size: 200%;
 			color: white;
 			background: black;
@@ -459,6 +460,33 @@ body {
 			body.black &:hover {
 				color: white;
 				background: black;
+			}
+		}
+
+		a#switch-resolution {
+			display: inline-block;
+			margin-left: 20px;
+			pointer-events: all;
+			color: white;
+			font-size: 120%;
+			text-decoration: none;
+			border-bottom: 1px solid white;
+
+			&:hover {
+				border-color: transparent;
+			}
+			span.label-slow {
+				display: none;
+			}
+
+			&.high {
+				span.label-fast {
+					display: none;
+				}
+
+				span.label-slow {
+					display: block;
+				}
 			}
 		}
 	}
@@ -675,4 +703,10 @@ body {
 	top: 0;
 	left: 0;
 	font-size: 0;
+	width: 100%;
+	height: 100%;
+	canvas {
+		width: 100%;
+		height: 100%;
+	}
 }
