--- a/app/handlebars/partials/header.handlebars
+++ b/app/handlebars/partials/header.handlebars
@@ -46,6 +46,7 @@
 						{{> menuButton url="musicvideo1" label="Music + Video - 1"}}
 						{{> menuButton url="musicvideo2" label="Music + Video - 2"}}
 						{{> menuButton url="landscape" label="Snowy Landscape"}}
+						{{> menuButton url="vol_ink" label="Ink on paper"}}
 					</ul>
 				</div>
 			</div>
