--- a/app/handlebars/vol_ink.handlebars
+++ b/app/handlebars/vol_ink.handlebars
@@ -10,6 +10,9 @@
 			<a href="https://github.com/gpomp/exp-webgl/tree/master/app/typescript/{{template}}" target="_blank">Typescript</a><br>
 			<a href="https://github.com/gpomp/exp-webgl/tree/master/app/shaders/{{template}}" target="_blank">Shaders</a>
 		</p>
+
+		<h3>Credits</h3>
+		<p>Drawing by <a href="http://www.nicolasgil.com/" target="_blank">Nicolas Gil</a></p>
 	{{> project-footer}}
 
 	<div id="instructions">
